sumo/tests/sumo/extended/vaporizer/errors/begin_not_numeric/errors.sumo
Error: Attribute 'begin' in definition of a(n) vaporizer is not an int.
Quitting (on error).
